# plthook

./: .appveyor.yml  .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  meson.build  plthook.c  plthook.h  plthook_elf.c  plthook_osx.c  plthook_win32.c
.github/workflows/: oracle-client.yml  run-tests.yml
images/: figure1.dia  figure2.dia  figure3.dia  figure4.dia
test/: .gitignore  Makefile  Makefile.win32  check-oracle-client.c  libtest.c  libtest.def  libtest.h  run-test.bat  testlazybinding.c  testprog.c  uclibc-test.sh
test/android/: run_tests
test/android/jni/: Android.mk
